Clean and refactor ParseExpression.