@@ -13,34 +13,48 @@ import org.funz.util.Parser;
 
 public class ParseExpression {
 
-    public static List<String> StaticMethods = new LinkedList<String>();
-    public final static String PIPE = ">>";
+    private static final List<String> STATIC_METHODS = new LinkedList<>();
+    private final static String PIPE = ">>";
     public final static String FILES = "files";
 
-     static void initEngine() {
+    /**
+     * Initializes the engine by populating the list of static methods from the org.funz.util.Parser class. (see funz-core)
+     */
+    static void initEngine() {
         Method[] methods = Parser.class.getMethods();
         for (Method method : methods) {
-            if (!StaticMethods.contains(method.getName())) {
-                StaticMethods.add(method.getName());
+            if (!STATIC_METHODS.contains(method.getName())) {
+                STATIC_METHODS.add(method.getName());
             }
         }
     }
 
+    /**
+     * Evaluates a static method on the given object with the specified arguments.
+     *
+     * @param o The object on which the method is invoked.
+     * @param staticMethod The name of the static method to invoke.
+     * @param args The arguments to pass to the method.
+     * @return The result of the method invocation.
+     * @throws Exception If the method cannot be invoked or does not exist.
+     */
     public static Object Eval(Object o, String staticMethod, Object... args) throws Exception {
-//        System.err.println("---------------------> Eval " + staticMethod + " ... " + Arrays.asList(args));
         if (o == null) {
-            Log.logMessage("[ParseExpression.Call]", SeverityLevel.WARNING, true, "Calling " + staticMethod + " on args=" + Arrays.asList(args) + " for null object.");
+            Log.logMessage("[ParseExpression.Call]", SeverityLevel.ERROR, true, "Calling " + staticMethod + " on args=" + Arrays.asList(args) + " for null object.");
+            return null;
         }
         if (staticMethod == null) {
-            Log.logMessage("[ParseExpression.Call]", SeverityLevel.WARNING, true, "Calling void method on args=" + Arrays.asList(args) + " for " + o);
+            Log.logMessage("[ParseExpression.Call]", SeverityLevel.ERROR, true, "Calling void method on args=" + Arrays.asList(args) + " for " + o);
+            return null;
         }
         staticMethod = staticMethod.trim();
         if (args == null || args.length == 0) {
-            Log.logMessage("[ParseExpression.Call]", SeverityLevel.WARNING, true, "Calling " + staticMethod + " on void args for " + o);
+            Log.logMessage("[ParseExpression.Call]", SeverityLevel.ERROR, true, "Calling " + staticMethod + " on void args for " + o);
+            return null;
         }
-        Class[] argsclass = new Class[args.length];
+        Class<?>[] argsclass = new Class[args.length];
         for (int i = 0; i < argsclass.length; i++) {
-            Class noprim = args[i].getClass();
+            Class<?> noprim = args[i].getClass();
             if (noprim == Double.class) {
                 argsclass[i] = double.class;
             } else if (noprim == Integer.class) {
@@ -53,42 +67,69 @@ public class ParseExpression {
                 argsclass[i] = noprim;
             }
         }
-        Method m = null;
+        Method m = getMethod(o, staticMethod, argsclass);
+        return m.invoke(o, args);
+    }
+
+    /**
+     * Retrieves a method from the specified object or class based on the method name and argument types.
+     *
+     * @param o The object or class instance on which the method is to be invoked.
+     * @param staticMethod The name of the method to retrieve. If it contains a dot (e.g., "ClassName.methodName"),
+     *                     it is treated as a static method of the specified class.
+     * @param argsclass An array of argument types that the method accepts.
+     * @return The Method object representing the specified method.
+     * @throws ClassNotFoundException If the class specified in the static method name cannot be found.
+     * @throws NoSuchMethodException If the method with the specified name and argument types cannot be found.
+     */
+    private static Method getMethod(Object o, String staticMethod, Class<?>[] argsclass) throws ClassNotFoundException, NoSuchMethodException {
+        Method m;
         if (staticMethod.contains(".")) { // Integer.parseInt
             String pack = "";
+            // If the method starts with an uppercase letter, it is a static method of the java.lang package. like Integer.parseInt
             if (Character.isUpperCase(staticMethod.charAt(0))) {
                 pack = "java.lang.";
             }
-            Class classs = Class.forName(pack + staticMethod.substring(0, staticMethod.indexOf(".")));
-            m = classs.getMethod(staticMethod.substring(staticMethod.indexOf(".") + 1), argsclass);
+            Class<?> aClass = Class.forName(pack + staticMethod.substring(0, staticMethod.indexOf(".")));
+            m = aClass.getMethod(staticMethod.substring(staticMethod.indexOf(".") + 1), argsclass);
         } else {
             m = o.getClass().getMethod(staticMethod.trim(), argsclass);
         }
-        Object out = m.invoke(o, args);
-//        System.err.println("-----------------------------------------------------> " + out);
-        return out;
+        return m;
     }
 
-    static boolean isBraced(String s) {
+    /**
+     * Checks if the given string is braced or represents a valid algebraic expression.
+     *
+     * @param expr The string expression to check.
+     * @return True if the string is braced or valid, false otherwise.
+     */
+    static boolean isBraced(String expr) {
         try {
-            Double.parseDouble(s);
+            Double.parseDouble(expr);
             return true;
         } catch (NumberFormatException e) {
-            return s.trim().matches("([\\!\\-]*[a-zA-Z0-9\\.]*)\\((.*)\\)");// startsWith("(") && s.endsWith(")");
+            return expr.trim().matches("([!\\-]*[a-zA-Z0-9.]*)\\((.*)\\)");
         }
     }
 
+    /**
+     * Evaluates an algebraic expression on the given object.
+     *
+     * @param o The object to evaluate the expression on.
+     * @param expr The algebraic expression to evaluate.
+     * @return The result of the evaluation.
+     * @throws Exception If the expression cannot be evaluated.
+     */
     public static Object CallAlgebra(Object o, String expr) throws Exception {
-//        System.err.println("> CallAlgebra " + expr);
         try {
-            Double d = Double.parseDouble(expr.toString());
-            return d;
-        } catch (NumberFormatException e) {
+            return Double.parseDouble(expr);
+        } catch (NumberFormatException ignored) {
         }
-        if (expr.toString().trim().equals("true")) {
+        if (expr.trim().equals("true")) {
             return true;
         }
-        if (expr.toString().trim().equals("false")) {// pffff...
+        if (expr.trim().equals("false")) {
             return false;
         }
 
@@ -204,7 +245,7 @@ public class ParseExpression {
 
         if (expr.contains("(")) {
             Object ret = CallMethod(o, expr);
-            if (ret != null && ret.toString().equals(expr.toString())) {
+            if (ret != null && ret.toString().equals(expr)) {
                 throw new Exception("Cannot evaluate expression " + expr); //to avoid infinite loop between CallAlgebra & CallMethod
             } else {
                 return ret;
@@ -215,23 +256,29 @@ public class ParseExpression {
         }
     }
 
+    /**
+     * Evaluates a method call expression on the given object.
+     *
+     * @param o The object to evaluate the method call on.
+     * @param expr The method call expression to evaluate.
+     * @return The result of the method call.
+     * @throws Exception If the method call cannot be evaluated.
+     */
     public static Object CallMethod(Object o, String expr) throws Exception {
-//        System.err.println("> CallMethod " + expr);
         try {
-            Double d = Double.parseDouble(expr);
-            return d;
-        } catch (NumberFormatException e) {
+            return Double.parseDouble(expr);
+        } catch (NumberFormatException ignored) {
         }
         if (expr.trim().equals("true")) {
             return true;
         }
-        if (expr.trim().equals("false")) {// pffff...
+        if (expr.trim().equals("false")) {
             return false;
         }
 
         if (!expr.contains("(")) {
             Object a = CallAlgebra(o, expr);
-            if (a != null && a.toString().equals(expr.toString())) {
+            if (a != null && a.toString().equals(expr)) {
                 Log.err(new Exception("Cannot evaluate method " + expr), 1); //to avoid infinite loop between CallAlgebra & CallMethod
             }
             return a;
@@ -239,7 +286,7 @@ public class ParseExpression {
 
         String method = expr.substring(0, expr.indexOf('('));
         String head = "";
-        if (method.length() > 0) {
+        if (!method.isEmpty()) {
             int h = method.length() - 1;
             while (h > 0 && (Character.isLetterOrDigit(method.charAt(h)) || method.charAt(h) == '.' || method.charAt(h) == '_')) {
                 h--;
@@ -250,60 +297,8 @@ public class ParseExpression {
         String args_string = expr.substring(expr.indexOf('(') + 1, expr.lastIndexOf(')'));
         String tail = expr.lastIndexOf(')') == expr.length() - 1 ? "" : expr.substring(expr.lastIndexOf(')') + 1);
 
-//        System.err.println("method " + method);
-//        System.err.println("head " + head);
-//        System.err.println("tail " + tail);
-        List<String> args_string_list = new LinkedList<String>();
-        int openBraces = 0;
-        boolean escaped = false;
-        boolean simpleQuoted = false;
-        boolean doubleQuoted = false;
-        StringBuilder current_arg = new StringBuilder();
-        for (int i = 0; i < args_string.length(); i++) {
-            char c = args_string.charAt(i);
-            if (c == ',' && openBraces == 0 && !simpleQuoted && !doubleQuoted) {
-                args_string_list.add(current_arg.toString());
-                current_arg = new StringBuilder();
-//                System.err.println(">>> " + args_string_list);
-                continue;
-            }
-//            System.err.println(current_arg);
-            current_arg.append(c);
-            //System.err.println(StringUtils.repeat(" ",i)+c);
-            if (c == '\\') {
-                escaped = true;
-//                System.err.println(StringUtils.repeat(" ", i + 1) + "escaped = T");
-            } else {
-                if (escaped) {
-                    escaped = false;
-//                    System.err.println(">" + StringUtils.repeat(" ", i) + "escaped = F");
-                } else {
-                    if (c == '\'') {
-//                        System.err.print(">" + StringUtils.repeat(" ", i) + "simpleQuoted = " + simpleQuoted);
-                        if (!doubleQuoted) {
-                            simpleQuoted = !simpleQuoted;
-                        }
-//                        System.err.println(" -> " + simpleQuoted);
-                    } else if (c == '\"') {
-//                        System.err.print(">" + StringUtils.repeat(" ", i) + "doubleQuoted = " + doubleQuoted);
-                        if (!simpleQuoted) {
-                            doubleQuoted = !doubleQuoted;
-                        }
-//                        System.err.println(" -> " + doubleQuoted);
-                    } else if (!simpleQuoted && !doubleQuoted) {
-                        if (c == '(') {
-                            openBraces++;
-//                            System.err.println(">" + StringUtils.repeat(" ", i) + "openBraces = " + openBraces);
-                        } else if (c == ')') {
-                            openBraces--;
-//                            System.err.println(">" + StringUtils.repeat(" ", i) + "openBraces = " + openBraces);
-                        }
-                    }
-                }
-            }
-        }
-        args_string_list.add(current_arg.toString());
-        String[] args_string_array = args_string_list.toArray(new String[args_string_list.size()]);
+        List<String> args_string_list = getArgsStringList(args_string);
+        String[] args_string_array = args_string_list.toArray(new String[0]);
         Object[] args = new Object[args_string_array.length];
         for (int i = 0; i < args.length; i++) {
             String arg_string = args_string_array[i].trim();
@@ -319,22 +314,20 @@ public class ParseExpression {
                 int in = Integer.parseInt(arg_string);
                 args[i] = in;
                 continue;
-            } catch (NumberFormatException e) {
+            } catch (NumberFormatException ignored) {
             }
             try {
                 double d = Double.parseDouble(arg_string);
                 args[i] = d;
                 continue;
-            } catch (NumberFormatException e) {
+            } catch (NumberFormatException ignored) {
             }
             args[i] = CallAlgebra(o, arg_string.trim());
         }
-        if (method.length() == 0 && args.length == 1) {//not a function call, just a bracket eval eg. (1+1)*3
-//            System.err.println("-------------------------> CallAlgebra " + head + args[0].toString() + tail);
+        if (method.isEmpty() && args.length == 1) {//not a function call, just a bracket eval eg. (1+1)*3
             return CallAlgebra(o, head + args[0].toString() + tail);
         } else {
-//            System.err.println("-------------------------> CallAlgebra/Eval h=" + head + " Call(o, method=" + method + ",args=<<" + Arrays.asList(args) + ">>) t=" + tail);
-            if (head.length() == 0 && tail.length() == 0) {
+            if (head.isEmpty() && tail.isEmpty()) {
                 return Eval(o, method, args);
             } else {
                 return CallAlgebra(o, head + Eval(o, method, args) + tail);
@@ -342,17 +335,74 @@ public class ParseExpression {
         }
     }
 
-    public static List getSyntax() {
-        LinkedList<String> list = new LinkedList<String>();
-        list.addAll(StaticMethods);
-        return list;
+    /**
+     * Parses a string of arguments into a list of individual argument strings.
+     *
+     * @param args_string The string containing the arguments.
+     * @return A list of argument strings.
+     */
+    private static List<String> getArgsStringList(String args_string) {
+        List<String> args_string_list = new LinkedList<>();
+        int openBraces = 0;
+        boolean escaped = false;
+        boolean simpleQuoted = false;
+        boolean doubleQuoted = false;
+        StringBuilder current_arg = new StringBuilder();
+        for (int i = 0; i < args_string.length(); i++) {
+            char c = args_string.charAt(i);
+            if (c == ',' && openBraces == 0 && !simpleQuoted && !doubleQuoted) {
+                args_string_list.add(current_arg.toString());
+                current_arg = new StringBuilder();
+                continue;
+            }
+            current_arg.append(c);
+            if (c == '\\') {
+                escaped = true;
+            } else {
+                if (escaped) {
+                    escaped = false;
+                } else {
+                    if (c == '\'') {
+                        if (!doubleQuoted) {
+                            simpleQuoted = !simpleQuoted;
+                        }
+                    } else if (c == '\"') {
+                        if (!simpleQuoted) {
+                            doubleQuoted = !doubleQuoted;
+                        }
+                    } else if (!simpleQuoted && !doubleQuoted) {
+                        if (c == '(') {
+                            openBraces++;
+                        } else if (c == ')') {
+                            openBraces--;
+                        }
+                    }
+                }
+            }
+        }
+        args_string_list.add(current_arg.toString());
+        return args_string_list;
     }
 
+    /**
+     * Retrieves the list of syntax elements (static methods) available for parsing.
+     *
+     * @return A list of syntax elements.
+     */
+    public static List<String> getSyntax() {
+        return new LinkedList<>(STATIC_METHODS);
+    }
+
+    /**
+     * Converts a user-defined expression into a generalized expression format.
+     *
+     * @param userExpression The user-defined expression.
+     * @return The generalized expression.
+     */
     static String importExpression(String userExpression) {
         String gexpr = userExpression;
 
         while (gexpr.contains(PIPE)) {
-            //System.out.println("    " + gexpr);
             int i = gexpr.indexOf(PIPE);
             int j = gexpr.indexOf("(", i + PIPE.length());
             if (gexpr.substring(j + 1).trim().startsWith(")")) {//no more arg
@@ -364,38 +414,56 @@ public class ParseExpression {
         return gexpr;
     }
 
+    /**
+     * Exports an object, simplifying it if it is a list with a single element.
+     *
+     * @param go The object to export.
+     * @return The simplified or original object.
+     */
     static Object exportObject(Object go) {
-        if (go instanceof List) {
-            List golist = (List) go;
+        if (go instanceof List<?>) {
+            List<?> golist = (List<?>) go;
             if (golist.size() == 1) {
-                return exportObject(golist.get(0));
+                return exportObject(golist.getFirst());
             } else {
-                return golist;//ASCII.cat("\n", golist);
-                //return ASCII.cat("\n", golist);
+                return golist;
             }
         }
 
-        return go;//.toString();
-    }
-
-    public static Object eval(Object of, Map<String, Object> outputNamesValues) {
-        assert of instanceof String : "Problem trying to eval " + of.toString() + " : not a String";
-        return eval((String) of, outputNamesValues);
+        return go;
     }
 
     /**
-     * apply the function to get the result
+     * Evaluates an expression using the provided parameters.
      *
-     * @param outputValues values of initial outputs
+     * @param expression The expression to evaluate.
+     * @param outputNamesValues A map expression parameter names and their values.
+     * @return The result expression the evaluation.
      */
-    public synchronized static Object eval(String f, Map<String, Object> params) {
-        Object out = null;
-        List<File> rfiles = new LinkedList<>();
-        try {
-            Log.logMessage("ParseExpression", SeverityLevel.INFO, false, "eval(" + f + "," + (params != null ? params.toString() : "null") + ")");
+    public static Object eval(Object expression, Map<String, Object> outputNamesValues) {
+        assert expression instanceof String : "Problem trying to eval " + expression.toString() + " : not a String";
+        return eval((String) expression, outputNamesValues);
+    }
 
-            if (params != null && params.containsKey(f)) {
-                return params.get(f);
+    /**
+     * Evaluates a function or expression using the provided parameters.
+     *
+     * @param expression The function or expression to evaluate.
+     * @param params A map of parameter names and their values.
+     * @return The result of the evaluation.
+     */
+    public synchronized static Object eval(String expression, Map<String, Object> params) {
+        Object out = null;
+        List<File> rFiles = new LinkedList<>();
+        try {
+            Log.logMessage("ParseExpression", SeverityLevel.INFO, false, "eval(" + expression + "," + (params != null ? params.toString() : "null") + ")");
+
+            if(params == null) {
+                Log.logMessage("ParseExpression", SeverityLevel.ERROR, false, "params is null");
+                return null;
+            }
+            if (params.containsKey(expression)) {
+                return params.get(expression);
             }
             File[] files = null;
             if (!(params.get(FILES) instanceof File[])) {
@@ -417,10 +485,10 @@ public class ParseExpression {
             if (files != null) {
                 for (File file : files) {
                     if (file.isFile()) {
-                        rfiles.add(file);
+                        rFiles.add(file);
                     } else {
                         try {
-                            Disk.listRecursiveFiles(file, rfiles);
+                            Disk.listRecursiveFiles(file, rFiles);
                         } catch (Exception e) {
                             Log.logException(true, e);
                         }
@@ -428,16 +496,15 @@ public class ParseExpression {
                 }
             }
 
-            Parser o = new Parser(rfiles.toArray(new File[rfiles.size()]));
-            if (f.startsWith("`") && f.endsWith("`")) {
-                f = f.substring(1, f.length() - 1);
+            Parser o = new Parser(rFiles.toArray(new File[0]));
+            if (expression.startsWith("`") && expression.endsWith("`")) {
+                expression = expression.substring(1, expression.length() - 1);
             }
-            String ie = importExpression(f);
+            String ie = importExpression(expression);
             out = exportObject(CallAlgebra(o, ie));
             Log.logMessage("ParseExpression", SeverityLevel.INFO, false, "  >> " + out);
         } catch (Exception e) {
-            Log.logException(false, new Exception(e.getClass()+": Failed to evaluate expression " + f + " on files " + rfiles + "\n" + e.getMessage()));
-            if (Log.level>=10) e.printStackTrace();
+            Log.logException(false, new Exception(e.getClass()+": Failed to evaluate expression " + expression + " on files " + rFiles + "\n" + e.getMessage()));
         }
         return out;
     }
